# quiz_game_t_bot_db

./: main.py  pyproject.toml  questions.json
